# AutoTestSys

./: CMakeLists.txt  README.MD  vcpkg.json
database/: CMakeLists.txt  prod_data.h  prod_db.sql  prod_storage.cpp  prod_storage.h  prod_table.h  sqlite_exec.cpp  sqlite_exec.h
instrument/: CMakeLists.txt  auto_test_system.cpp  auto_test_system.h  sys_msg_parse.cpp  sys_msg_parse.h  test_sys.cpp
widget/: CMakeLists.txt  DBAbstractTableModel.cpp  DBAbstractTableModel.h  db_widget.cpp  db_widget.h  main.cpp  model_data.h  qvariant_cvt.hpp
